# argv

./: Makefile.am  Makefile.in  README.md  configure.ac  features.txt  rules.mk
api/: argv.h
src/: Makefile  Makefile.am  Makefile.in  dump.c  parse.c  val.c
src/api/: error.h  parse.h  synopsis.h  val.h
src/inc/: dump.h  val.h
tests/: Makefile  Makefile.am  Makefile.in  t1.argv.spec  t1.c  t1.synopsis.spec
